artifacts/reporting/stock_reports/archive/v0.2/20260814/244580_KODEX 바이오.md
# [KODEX 바이오 (244580)] 종목 리포트 v0.2

- **시장 구분 (Listing Market)**: `KOSPI`
- **자산 유형 (Asset Type)**: `ETF`
- **분석 기준일 (Requested As-Of)**: `2026-08-14`
- **신선도 기준일 (Reference Market Date)**: `2026-08-14`
- **리포트 상태**: `PARTIAL`

---

## 0. 핵심 요약 (Executive Summary)
> **KODEX 바이오(244580)는 현재 Pattern A WEAK 단계이며, 필수 데이터 부족(DATA_UNAVAILABLE)으로 투자 적격성을 판정할 수 없습니다.**
>
> - 패스트 코어 V2: 전략 적용 대상 아님
> - 현재 Pattern A Score는 67.48점(Stage: WEAK, Candidate: NO)입니다.
> - 필수 데이터 부족(REQUIRED_METRIC_UNAVAILABLE)으로 Phase 10 Investability 판정이 불가능합니다.
> - 외국인 수급: 외국인 수급 데이터가 준비되지 않아 수급 분석을 제공할 수 없습니다.
> - 거래대금 추세: 최근 거래대금이 특정 방향성 없이 기간별로 혼조세를 나타내고 있습니다. (5일: 69.36억원, 20일: 58.05억원, 60일: 106.10억원)

현재 KODEX 바이오은(는) Pattern A Score 67.48점, WEAK 단계이며 필수 데이터 부족(REQUIRED_METRIC_UNAVAILABLE)으로 투자 적격성 판정이 보류되었습니다. 최근 12개월 동안 EARLY_TREND(89.61점)에서 WEAK(67.48점)로 국면 이동이 관찰되었습니다. 외국인 수급은 FLOW_UNAVAILABLE 상태로, 외국인 수급 데이터가 준비되지 않아 수급 분석을 제공할 수 없습니다. 거래대금은 TRADING_VALUE_MIXED 상태로, 최근 거래대금이 특정 방향성 없이 기간별로 혼조세를 나타내고 있습니다. (5일: 69.36억원, 20일: 58.05억원, 60일: 106.10억원)

---

## 1. 현재 기술적 국면 & 투자 적격성 스냅샷 (Current Snapshot)
- **Pattern A Score**: `67.48`
- **공식 국면 (Official Stage)**: `WEAK`
- **Candidate 판정**: `NO (blocked)`
- **시가총액**: `N/A`
- **20일 평균 거래대금**: `58.05억원`
- **Investability 상태**: `DATA_UNAVAILABLE` (사유: `REQUIRED_METRIC_UNAVAILABLE`)
- **최종 투자 가능 여부 (Is Investable)**: `NO`

---

## 2. 패스트 코어 V2 전략 상태 (A FAST Core V2 Strategy State)
> ⚠️ **UNVERIFIED_HISTORICAL_METADATA** — 이 시점의 종목 메타데이터는 formal 재검증되지 않았습니다(`LEGACY_UNVERIFIED`). 아래 전략 상태는 retrospective 연구용이며 production 투자 판단 근거가 아닙니다.
- **메타데이터 신뢰 모드 (Metadata Provenance Mode)**: `HISTORICAL_LEGACY_RESEARCH`
- **전략 상태 (Strategy State)**: `NOT_APPLICABLE`
- **패스트 코어 전략 포지션 (Canonical Strategy Position)**: `NOT_APPLICABLE`
- **현재 전략 행동 (Current Action)**: `NONE`
- **현재 전략 거래 순번**: `N/A`
- **전략 해석**: 보통주가 아닌 종목(ETF/ETN/우선주/스팩/리츠 등)으로 패스트 코어 V2 전략 적용 대상이 아닙니다.

---

## 3. Pattern A FAST 현재 신호 (`Experimental / Early Signal`)
- **Contract**: `HIERARCHICAL_V01` (`PHASE_13_RESEARCH_CLOSED / HIERARCHICAL_V01_PRODUCTION_HOLD`)
- **기준 주 (As-Of)**: `2026-08-14`
- **FAST Score**: `44.51`
- **Score Availability**: `READY`
- **FAST Stage**: `WATCH`
- **Stage Availability**: `READY`
- **Monthly Regime**: `EARLY_REGIME`
- **Daily Risk**: `NORMAL`
- **해석**: FAST 기준 명확한 초기 상승 전환 구조가 아직 확인되지 않았습니다.

> Pattern A FAST는 Pattern A와 독립적인 실험적(Experimental) 조기 신호이며, Pattern A Score/Stage/Candidate/Production Ranking에 영향을 주지 않습니다. 두 모델의 Score를 합산하거나 상대 우열을 계산하지 않습니다.

---

## 4. Pattern A Monthly History — 최근 12개월 월별 추이 (Recent 12M Trajectory)

| 기준일 | 종가 | Pattern A Score | Stage | Candidate State | Data Available |
|---|---:|---:|---|---|---|
| 2025-07-31 | 9,500 | 89.61 | EARLY_TREND | candidate | True |
| 2025-08-29 | 9,430 | 90.47 | TRANSITION | candidate | True |
| 2025-09-30 | 10,160 | 94.14 | EARLY_TREND | candidate | True |
| 2025-10-31 | 11,115 | 100.00 | TRANSITION | candidate | True |
| 2025-11-28 | 12,350 | 100.00 | EARLY_TREND | candidate | True |
| 2025-12-30 | 12,490 | 100.00 | EARLY_TREND | candidate | True |
| 2026-01-30 | 13,435 | 96.69 | EARLY_TREND | candidate | True |
| 2026-02-27 | 14,135 | 82.58 | PROGRESSED | late | True |
| 2026-03-31 | 12,115 | 78.57 | PROGRESSED | late | True |
| 2026-04-30 | 12,125 | 68.55 | PROGRESSED | late | True |
| 2026-05-29 | 11,020 | 67.83 | PROGRESSED | late | True |
| 2026-06-30 | 9,345 | 65.78 | PROGRESSED | late | True |
| 2026-07-31 | 7,400 | 67.48 | WEAK | blocked | True |

- **점수 변화 모멘텀**: 1M (+1.70), 3M (-1.07), 6M (-29.21), 12M (-22.13)

---

## 5. Pattern A 국면 전환 이력 (Stage Transition History)
- **2019-04-30**: `UNAVAILABLE` -> `TRANSITION`
- **2019-06-28**: `TRANSITION` -> `WEAK`
- **2020-05-29**: `WEAK` -> `TRANSITION`
- **2020-07-31**: `TRANSITION` -> `EARLY_TREND`
- **2020-10-30**: `EARLY_TREND` -> `PROGRESSED`
- **2021-11-30**: `PROGRESSED` -> `TRANSITION`
- **2022-03-31**: `TRANSITION` -> `PROGRESSED`
- **2022-05-31**: `PROGRESSED` -> `WEAK`
- **2024-03-29**: `WEAK` -> `BASE`
- **2024-06-28**: `BASE` -> `WEAK`
- **2024-07-31**: `WEAK` -> `BASE`
- **2024-08-30**: `BASE` -> `TRANSITION`
- **2024-11-29**: `TRANSITION` -> `WEAK`
- **2025-01-31**: `WEAK` -> `TRANSITION`
- **2025-06-30**: `TRANSITION` -> `EARLY_TREND`
- **2025-08-29**: `EARLY_TREND` -> `TRANSITION`
- **2025-09-30**: `TRANSITION` -> `EARLY_TREND`
- **2025-10-31**: `EARLY_TREND` -> `TRANSITION`
- **2025-11-28**: `TRANSITION` -> `EARLY_TREND`
- **2026-02-27**: `EARLY_TREND` -> `PROGRESSED`
- **2026-07-31**: `PROGRESSED` -> `WEAK`

---

## 6. Pattern A FAST Weekly History (`Experimental / Early Signal`)
- **Contract**: `HIERARCHICAL_V01` (`PHASE_13_RESEARCH_CLOSED / HIERARCHICAL_V01_PRODUCTION_HOLD`)
- **History 시작 주**: `2025-08-22`
- **History 종료 주**: `2026-08-14`
- **총 주별 관측 개수**: `49주`

| 기준 주 (Week Ending) | 종가 | FAST Score | Score Availability | FAST Stage | Stage Availability | Monthly Regime | Daily Risk |
|---|---:|---:|---|---|---|---|---|
| 2025-08-22 | 9,130 | 69.10 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2025-08-29 | 9,430 | 79.80 | READY | TRIGGER | READY | PERMITTED_REGIME | NORMAL |
| 2025-09-05 | 10,020 | 79.30 | READY | TRIGGER | READY | PERMITTED_REGIME | NORMAL |
| 2025-09-12 | 10,335 | 79.30 | READY | TRIGGER | READY | PERMITTED_REGIME | NORMAL |
| 2025-09-19 | 10,365 | 79.30 | READY | TRIGGER | READY | PERMITTED_REGIME | NORMAL |
| 2025-09-26 | 10,040 | 79.80 | READY | TRIGGER | READY | PERMITTED_REGIME | NORMAL |
| 2025-10-10 | 10,285 | 82.05 | READY | TRIGGER | READY | PERMITTED_REGIME | NORMAL |
| 2025-10-17 | 9,950 | 82.05 | READY | TRIGGER | READY | PERMITTED_REGIME | NORMAL |
| 2025-10-24 | 10,145 | 82.05 | READY | TRIGGER | READY | PERMITTED_REGIME | NORMAL |
| 2025-10-31 | 11,115 | 72.10 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2025-11-07 | 11,130 | 73.79 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2025-11-14 | 11,865 | 70.79 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2025-11-21 | 11,820 | 71.29 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2025-11-28 | 12,350 | 70.79 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2025-12-05 | 12,700 | 70.79 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2025-12-12 | 12,880 | 75.10 | READY | EXTENDED | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2025-12-19 | 12,450 | 72.60 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2025-12-26 | 12,325 | 72.60 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-01-02 | 12,425 | 72.60 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-01-09 | 12,920 | 72.60 | READY | EXTENDED | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-01-16 | 12,320 | 72.60 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-01-23 | 12,460 | 71.29 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-01-30 | 13,435 | 70.79 | READY | EXTENDED | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-02-06 | 12,410 | 61.66 | READY | SETUP | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-02-13 | 12,970 | 67.79 | READY | EXTENDED | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-02-20 | 13,365 | 71.29 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-02-27 | 14,135 | 70.79 | READY | EXTENDED | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-03-06 | 13,185 | 54.29 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | EXTREME |
| 2026-03-13 | 13,470 | 63.04 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | ELEVATED |
| 2026-03-20 | 13,355 | 68.29 | READY | EXTENDED | READY | LATE_OR_EXTENDED_REGIME | NORMAL |
| 2026-03-27 | 13,250 | 63.04 | READY | TRIGGER | READY | LATE_OR_EXTENDED_REGIME | ELEVATED |
| 2026-04-03 | 11,800 | 66.36 | READY | SETUP | READY | PERMITTED_REGIME | ELEVATED |
| 2026-04-10 | 11,945 | 66.36 | READY | SETUP | READY | PERMITTED_REGIME | ELEVATED |
| 2026-04-17 | 12,680 | 71.61 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-04-24 | 12,535 | 72.92 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-05-08 | 11,795 | 72.92 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-05-15 | 11,225 | 70.56 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-05-22 | 11,230 | 67.06 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-05-29 | 11,020 | 70.56 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-06-05 | 10,260 | 59.71 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-06-12 | 9,800 | 54.46 | READY | WATCH | READY | PERMITTED_REGIME | ELEVATED |
| 2026-06-19 | 9,465 | 59.71 | READY | SETUP | READY | PERMITTED_REGIME | NORMAL |
| 2026-06-26 | 8,660 | 52.01 | READY | WATCH | READY | PERMITTED_REGIME | NORMAL |
| 2026-07-03 | 9,060 | 61.90 | READY | SETUP | READY | PERMITTED_REGIME | ELEVATED |
| 2026-07-10 | 8,480 | 45.45 | READY | WATCH | READY | PERMITTED_REGIME | EXTREME |
| 2026-07-24 | 7,805 | 41.51 | READY | WATCH | READY | PERMITTED_REGIME | NORMAL |
| 2026-07-31 | 7,400 | 23.51 | READY | WATCH | READY | EARLY_REGIME | ELEVATED |
| 2026-08-07 | 8,730 | 39.26 | READY | WATCH | READY | EARLY_REGIME | NORMAL |
| 2026-08-14 | 9,040 | 44.51 | READY | WATCH | READY | EARLY_REGIME | NORMAL |

> Pattern A와 동일 timeline 표로 합치지 않습니다. Pattern A는 월 단위, Pattern A FAST는 주 단위가 각 모델의 핵심 시간축입니다. FAST Score가 `N/A`(UNAVAILABLE)인 경우 `0`이 아니라 데이터 부족을 의미합니다.

---

## 7. 외국인 수급 확증 (Foreign Flow Analysis - Phase 11)
- **수급 데이터 상태**: `DATA_UNAVAILABLE`
- **수급 국면 판정**: `FLOW_UNAVAILABLE`
- **규칙 기반 해석**: 외국인 수급 데이터가 준비되지 않아 수급 분석을 제공할 수 없습니다.


---

## 8. 거래대금 추세 분석 (Trading Value Flow)
- **거래대금 상태**: `TRADING_VALUE_MIXED`
- **규칙 기반 해석**: 최근 거래대금이 특정 방향성 없이 기간별로 혼조세를 나타내고 있습니다. (5일: 69.36억원, 20일: 58.05억원, 60일: 106.10억원)
- **5일 평균 거래대금**: `69.36억원`
- **20일 평균 거래대금**: `58.05억원`
- **60일 평균 거래대금**: `106.10억원`
- **단기 확장 비율 (5D / 20D)**: `1.19배`
- **중기 확장 비율 (20D / 60D)**: `0.55배`

---

## 9. Pattern A 전체 월별 이력 (Full Monthly History)
- **전체 관측 시작월**: `2016-05-31`
- **전체 관측 종료월**: `2026-07-31`
- **최초 Pattern A 산출월**: `2019-04-30`
- **총 월별 관측 개수**: `123개월` (Pattern A 산출 가능: `88개월`)

| 기준일 | 종가 | Pattern A Score | Stage | Candidate State | Data Available | Reason |
|---|---:|---:|---|---|---|---|
| 2016-05-31 | 10,880 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2016-06-30 | 10,990 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2016-07-29 | 10,585 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2016-08-31 | 9,795 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2016-09-30 | 9,935 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2016-10-31 | 8,015 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2016-11-30 | 7,660 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2016-12-29 | 8,255 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-01-31 | 7,475 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-02-28 | 7,820 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-03-31 | 7,670 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-04-28 | 7,860 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-05-31 | 8,575 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-06-30 | 8,520 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-07-31 | 8,155 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-08-31 | 8,535 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-09-29 | 8,575 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-10-31 | 9,120 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-11-30 | 10,410 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2017-12-28 | 11,315 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-01-31 | 13,900 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-02-28 | 12,715 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-03-30 | 13,460 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-04-30 | 13,410 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-05-31 | 12,710 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-06-29 | 11,485 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-07-31 | 10,650 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-08-31 | 12,640 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-09-28 | 13,255 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-10-31 | 9,700 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-11-30 | 10,865 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2018-12-28 | 10,670 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-01-31 | 10,890 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-02-28 | 11,545 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-03-29 | 11,015 | N/A | UNAVAILABLE | insufficient_data | False | INSUFFICIENT_LOOKBACK |
| 2019-04-30 | 10,875 | 97.93 | TRANSITION | candidate | True | - |
| 2019-05-31 | 9,530 | 83.58 | TRANSITION | candidate | True | - |
| 2019-06-28 | 8,700 | 76.03 | WEAK | blocked | True | - |
| 2019-07-31 | 7,975 | 67.00 | WEAK | blocked | True | - |
| 2019-08-30 | 7,600 | 59.60 | WEAK | blocked | True | - |
| 2019-09-30 | 7,495 | 54.61 | WEAK | blocked | True | - |
| 2019-10-31 | 8,480 | 52.99 | WEAK | blocked | True | - |
| 2019-11-29 | 8,380 | 49.01 | WEAK | blocked | True | - |
| 2019-12-30 | 9,320 | 46.02 | WEAK | blocked | True | - |
| 2020-01-31 | 8,230 | 22.24 | WEAK | blocked | True | - |
| 2020-02-28 | 8,035 | 4.63 | WEAK | blocked | True | - |
| 2020-03-31 | 8,995 | 0.00 | WEAK | blocked | True | - |
| 2020-04-29 | 9,365 | 0.00 | WEAK | blocked | True | - |
| 2020-05-29 | 10,435 | 11.78 | TRANSITION | candidate | True | - |
| 2020-06-30 | 11,705 | 38.73 | TRANSITION | candidate | True | - |
| 2020-07-31 | 13,160 | 68.76 | EARLY_TREND | candidate | True | - |
| 2020-08-31 | 15,195 | 91.08 | EARLY_TREND | candidate | True | - |
| 2020-09-29 | 14,110 | 90.99 | EARLY_TREND | candidate | True | - |
| 2020-10-30 | 12,765 | 87.83 | PROGRESSED | late | True | - |
| 2020-11-30 | 15,025 | 68.87 | PROGRESSED | late | True | - |
| 2020-12-30 | 17,080 | 74.52 | PROGRESSED | late | True | - |
| 2021-01-29 | 15,780 | 68.87 | PROGRESSED | late | True | - |
| 2021-02-26 | 14,615 | 64.08 | PROGRESSED | late | True | - |
| 2021-03-31 | 14,390 | 50.55 | PROGRESSED | late | True | - |
| 2021-04-30 | 14,680 | 48.59 | PROGRESSED | late | True | - |
| 2021-05-31 | 14,235 | 50.39 | PROGRESSED | late | True | - |
| 2021-06-30 | 15,110 | 54.47 | PROGRESSED | late | True | - |
| 2021-07-30 | 14,610 | 74.09 | PROGRESSED | late | True | - |
| 2021-08-31 | 15,815 | 79.90 | PROGRESSED | late | True | - |
| 2021-09-30 | 14,295 | 83.17 | PROGRESSED | late | True | - |
| 2021-10-29 | 13,075 | 76.18 | PROGRESSED | late | True | - |
| 2021-11-30 | 11,890 | 79.61 | TRANSITION | candidate | True | - |
| 2021-12-30 | 12,440 | 81.19 | TRANSITION | candidate | True | - |
| 2022-01-28 | 10,090 | 79.87 | TRANSITION | candidate | True | - |
| 2022-02-28 | 9,715 | 75.46 | TRANSITION | candidate | True | - |
| 2022-03-31 | 10,110 | 70.55 | PROGRESSED | late | True | - |
| 2022-04-29 | 9,385 | 65.48 | PROGRESSED | late | True | - |
| 2022-05-31 | 9,500 | 59.75 | WEAK | blocked | True | - |
| 2022-06-30 | 8,250 | 47.63 | WEAK | blocked | True | - |
| 2022-07-29 | 9,255 | 35.77 | WEAK | blocked | True | - |
| 2022-08-31 | 8,785 | 12.39 | WEAK | blocked | True | - |
| 2022-09-30 | 7,300 | 0.00 | WEAK | blocked | True | - |
| 2022-10-31 | 7,650 | 0.00 | WEAK | blocked | True | - |
| 2022-11-30 | 7,895 | 0.00 | WEAK | blocked | True | - |
| 2022-12-29 | 7,760 | 0.00 | WEAK | blocked | True | - |
| 2023-01-31 | 7,680 | 0.00 | WEAK | blocked | True | - |
| 2023-02-28 | 7,615 | 0.00 | WEAK | blocked | True | - |
| 2023-03-31 | 7,685 | 0.00 | WEAK | blocked | True | - |
| 2023-04-28 | 7,940 | 0.00 | WEAK | blocked | True | - |
| 2023-05-31 | 8,165 | 0.00 | WEAK | blocked | True | - |
| 2023-06-30 | 7,730 | 0.00 | WEAK | blocked | True | - |
| 2023-07-31 | 7,970 | 0.00 | WEAK | blocked | True | - |
| 2023-08-31 | 8,370 | 0.00 | WEAK | blocked | True | - |
| 2023-09-27 | 7,890 | 0.00 | WEAK | blocked | True | - |
| 2023-10-31 | 6,950 | 0.00 | WEAK | blocked | True | - |
| 2023-11-30 | 7,745 | 0.00 | WEAK | blocked | True | - |
| 2023-12-28 | 8,425 | 0.00 | WEAK | blocked | True | - |
| 2024-01-31 | 7,340 | 0.00 | WEAK | blocked | True | - |
| 2024-02-29 | 7,770 | 13.42 | WEAK | blocked | True | - |
| 2024-03-29 | 8,465 | 30.11 | BASE | watch | True | - |
| 2024-04-30 | 8,065 | 38.70 | BASE | watch | True | - |
| 2024-05-31 | 7,815 | 39.90 | BASE | watch | True | - |
| 2024-06-28 | 7,930 | 47.05 | WEAK | blocked | True | - |
| 2024-07-31 | 8,510 | 49.80 | BASE | watch | True | - |
| 2024-08-30 | 8,885 | 57.92 | TRANSITION | candidate | True | - |
| 2024-09-30 | 8,610 | 70.27 | TRANSITION | candidate | True | - |
| 2024-10-31 | 8,805 | 83.76 | TRANSITION | candidate | True | - |
| 2024-11-29 | 7,900 | 75.37 | WEAK | blocked | True | - |
| 2024-12-30 | 7,820 | 70.97 | WEAK | blocked | True | - |
| 2025-01-31 | 8,145 | 68.92 | TRANSITION | candidate | True | - |
| 2025-02-28 | 8,265 | 71.73 | TRANSITION | candidate | True | - |
| 2025-03-31 | 7,595 | 70.99 | TRANSITION | candidate | True | - |
| 2025-04-30 | 8,460 | 74.23 | TRANSITION | candidate | True | - |
| 2025-05-30 | 8,905 | 71.63 | TRANSITION | candidate | True | - |
| 2025-06-30 | 8,990 | 85.61 | EARLY_TREND | candidate | True | - |
| 2025-07-31 | 9,500 | 89.61 | EARLY_TREND | candidate | True | - |
| 2025-08-29 | 9,430 | 90.47 | TRANSITION | candidate | True | - |
| 2025-09-30 | 10,160 | 94.14 | EARLY_TREND | candidate | True | - |
| 2025-10-31 | 11,115 | 100.00 | TRANSITION | candidate | True | - |
| 2025-11-28 | 12,350 | 100.00 | EARLY_TREND | candidate | True | - |
| 2025-12-30 | 12,490 | 100.00 | EARLY_TREND | candidate | True | - |
| 2026-01-30 | 13,435 | 96.69 | EARLY_TREND | candidate | True | - |
| 2026-02-27 | 14,135 | 82.58 | PROGRESSED | late | True | - |
| 2026-03-31 | 12,115 | 78.57 | PROGRESSED | late | True | - |
| 2026-04-30 | 12,125 | 68.55 | PROGRESSED | late | True | - |
| 2026-05-29 | 11,020 | 67.83 | PROGRESSED | late | True | - |
| 2026-06-30 | 9,345 | 65.78 | PROGRESSED | late | True | - |
| 2026-07-31 | 7,400 | 67.48 | WEAK | blocked | True | - |

---

## 10. 데이터 품질 및 신원 (Data Quality & Provenance)
- **로컬 일봉 캐시**: `정상 로드 (2517행)`
- **데이터 기간**: `2016-05-13` ~ `2026-08-14`
- **완성 월봉 수**: `123개월`
- **데이터 품질 상태**: `OK`
- **적용 계약**: Score(`pattern_a_score_v0.2`), Stage(`pattern_a_stage_v0.1`), Strategy(`PATTERN_A_FAST_FINAL_STRATEGY_V02`), Investability(`phase10`), Flow(`phase11`)
- **외부 네트워크 요청**: `0회` (Zero Network Request)

---

*주의 (Disclaimer): 본 리포트는 기술적 지표 및 과거 수급/유동성 통계에 기반한 설명 자료이며, 매수/매도 추천이나 목표가를 제시하지 않습니다.*
